# netflix_rec_system

./: .gitignore  README.md  app.py  apps.py  database_connection.py  exceptions.py  pyproject.toml  server.py
.github/workflows/: python-package.yml
analysis_notebook/: Analysis new_netflix.ipynb
cleaning_notebook/: Cleaning Movie Recommender.ipynb
documentation/: Movie Recommender Systems.docx
model_building/: collaborative_model.joblib  content_model.joblib  model new_netflix.ipynb  model_classes.py  model_new_netflix.ipynb  new-netflix.ipynb
model_building/.ipynb_checkpoints/: Analysis_new_netflix (1)-checkpoint.ipynb  model_new_netflix-checkpoint.ipynb
static/: login.css  styles.css
templates/: index.html  login.html  search.html  user.html
tests/: test_database_connection.py
